--- a/GraphicsViewTests/GraphicsViewTests.vcxproj
+++ b/GraphicsViewTests/GraphicsViewTests.vcxproj
@@ -131,7 +131,12 @@
     <ClCompile Include="ColorSwatch.cpp" />
     <ClCompile Include="cSelection.cpp" />
     <ClCompile Include="cToolSelectionTest.cpp" />
-    <ClCompile Include="GPUFuncs.cpp" />
+    <ClCompile Include="GPUController.cpp" />
+    <ClCompile Include="GPUForThisApp.cpp" />
+    <ClCompile Include="GPUFuncs.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PaintToolBase.cpp" />
     <ClCompile Include="powerslider.cpp" />
@@ -185,7 +190,12 @@
     <ClInclude Include="cHUDShapeTool.h" />
     <ClInclude Include="cHUDTransform.h" />
     <ClInclude Include="cSelection.h" />
-    <ClInclude Include="GPUFuncs.h" />
+    <ClInclude Include="GPUController.h" />
+    <ClInclude Include="GPUForThisApp.h" />
+    <ClInclude Include="GPUFuncs.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClInclude>
     <ClInclude Include="Image.Utilities.h" />
     <ClInclude Include="Math.Fast.h" />
     <QtMoc Include="PaintToolBase.h">
@@ -228,10 +238,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="NormalBlend.cl" />
-    <None Include="Gaussian.cu" />
-    <None Include="GaussianDoublePassV.cl" />
-    <None Include="GaussianDoublePassH.cl" />
-    <None Include="Sum.cu" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
