--- a/GraphicsViewTests/GraphicsViewTests.vcxproj.filters
+++ b/GraphicsViewTests/GraphicsViewTests.vcxproj.filters
@@ -85,6 +85,9 @@
     <Filter Include="src\GPU">
       <UniqueIdentifier>{b738d8bd-a6c9-4a6b-a0c8-3d8b325060b5}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Thread">
+      <UniqueIdentifier>{ffdd7c2a-df1b-461f-8362-447c81d153a8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -191,6 +194,12 @@
     </ClCompile>
     <ClCompile Include="src\ToolSimpleBrush.cpp">
       <Filter>src\ToolModel\Tools</Filter>
+    </ClCompile>
+    <ClCompile Include="Thread.cpp">
+      <Filter>src\Thread</Filter>
+    </ClCompile>
+    <ClCompile Include="ThreadMachine.cpp">
+      <Filter>src\Thread</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -314,6 +323,15 @@
     </ClInclude>
     <ClInclude Include="GPUForThisApp.h">
       <Filter>src\GPU</Filter>
+    </ClInclude>
+    <ClInclude Include="Thread.h">
+      <Filter>src\Thread</Filter>
+    </ClInclude>
+    <ClInclude Include="ThreadMachine.h">
+      <Filter>src\Thread</Filter>
+    </ClInclude>
+    <ClInclude Include="Image.UtilitiesMultiThreaded.h">
+      <Filter>src\Image</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
