--- a/GraphicsViewTests/GraphicsViewTests.vcxproj
+++ b/GraphicsViewTests/GraphicsViewTests.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="cToolSelectionTest.cpp" />
     <ClCompile Include="GPUController.cpp" />
     <ClCompile Include="GPUForThisApp.cpp" />
+    <ClCompile Include="ImageDebugger.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PaintToolBase.cpp" />
     <ClCompile Include="powerslider.cpp" />
@@ -164,6 +165,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Image.UtilitiesMultiThreaded.h" />
+    <QtMoc Include="ImageDebugger.h">
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);.\tester;.\src;$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets;$(INHERIT);C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.0\include</IncludePath>
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='Release|x64'">.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);.\src;$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets;$(INHERIT);C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.0\include</IncludePath>
+    </QtMoc>
     <ClInclude Include="Thread.h" />
     <ClInclude Include="ThreadMachine.h" />
     <ClInclude Include="Image.ToolPaintUtilities.h" />
